--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-  "name": "nupods/kernl-lib-nu",
+  "name": "northeastern-web/kernl-lib-nu",
   "homepage": "https://assets.provost.northeastern.edu/kernl",
   "authors": [
     {
-      "name": "NU PODS",
-      "email": "provost-digital@northeastern.edu"
+      "name": "ITS Web Solutions (Previously NU PODS)",
+      "email": "websolutions@northeastern.edu"
     }
   ],
   "support": {
